--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,5 @@
         "outDir": "./dist",
         "sourceMap": true
     },
-    "include": ["./src/**/*.ts"],
-    "exclude": ["./src/**/*.test.ts"]
+    "include": ["./src/**/*.ts"]
 }
